sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_junctiondef/tls_state_switch.sumo
<tls-switch-states>
   <tlsstate time="0" id="0" subid="S2">RRRRGGGGRRRRGGGG</tlsstate>
</tls-switch-states>
